# SimKV

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_recovery.cpp  bench_throughput.cpp
cmake/: CompilerFlags.cmake
demo/: CMakeLists.txt  demo.cpp
docs/: design.md
scripts/: replay.sh  run_porcupine.sh
src/: CMakeLists.txt
src/checker/: CMakeLists.txt  own_checker.cpp  own_checker.hpp
src/checker/porcupine_glue/: go.mod  main.go
src/cli/: CMakeLists.txt  main.cpp
src/harness/: CMakeLists.txt  fault_injector.cpp  fault_injector.hpp  history.cpp  history.hpp  runner.cpp  runner.hpp  workload.cpp  workload.hpp
src/raft/: CMakeLists.txt  log.cpp  log.hpp  node.cpp  node.hpp  rpc.cpp  rpc.hpp  types.hpp
src/server/: CMakeLists.txt  dispatch_queue.cpp  dispatch_queue.hpp  real_clock.cpp  real_clock.hpp  server.cpp  tcp_transport.cpp  tcp_transport.hpp
src/sim/: CMakeLists.txt  event_queue.cpp  event_queue.hpp  network.cpp  network.hpp  prng.cpp  prng.hpp  simulator.cpp  simulator.hpp  time.hpp
src/storage/: CMakeLists.txt  codec.hpp  durable_store.cpp  durable_store.hpp  file_durable_store.cpp  file_durable_store.hpp  idurable_store.hpp  kv_store.cpp  kv_store.hpp  wal.cpp  wal.hpp
tests/: CMakeLists.txt  integration_test.sh  linearizability_test.cpp  raft_election_test.cpp  raft_membership_test.cpp  raft_partition_test.cpp  raft_read_index_test.cpp  raft_replication_test.cpp  raft_snapshot_test.cpp  sim_determinism_test.cpp  sim_network_test.cpp  storage_wal_test.cpp
